--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Will & Kat's Wedding</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
     <link rel="stylesheet" href="app.css">
+    <style>
+        .image-container {
+            max-width: 100%; /* Ensure the container doesn't exceed the width of its parent */
+            margin: 0 auto; /* Center the container horizontally */
+        }
+
+        .image-container img {
+            display: block; /* Ensure the image behaves as a block element */
+            max-width: 100%; /* Make the image responsive */
+            height: auto; /* Maintain the aspect ratio */
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -208,3 +222,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
