--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
     <section class="section" id="event-section">
 
         <h2>Events</h2>
-        <p><strong>Friday:</strong><br>BBQ & Costume Party 5:00pm</p>
+       <p><strong>Friday:</strong><br>BBQ & Themed Costume Party: 5:00pm
+        <br>Category is: <strong> TRANSFORMATION</strong></p>
+
         <img src="gif/alien.gif" alt="alien-gif" class="gif-image">
 
         <p><strong>Saturday:</strong><br>Ceremony 1:00pm<br>Reception 5:00pm</p>
